Add slight fixes

--- a/LaTeX/main.tex
+++ b/LaTeX/main.tex
@@ -429,6 +429,7 @@ The MI gain is negligible at low power levels, but a distinct threshold appears 
 For the \(4^{th}\) order dispersion we can see The MI bands span up to $\pm5GHz$, and the gain profile becomes more structured due to the higher-order phase mismatch. These features are crucial for tailoring spectral shaping, generating ultra-broadband combs, and enhancing pulse breakup dynamics in QD-based nonlinear photonic platforms.
 
 Such characteristics make QD systems prime candidates for tunable broadband sources, soliton generation, and high-speed optical signal processing.
+\newpage
 
 \section{Conclusion}
 In summary we have examined dispersive and optical nonlinear properties of SQDs under the regime of electromagnetic induced transparency. The magnitude of this nonlinearity could be controlled by controlling the Rabi frequency and detuning of the con- trolling fields. The intensity and the width of modulation spectra could be controlled by two control fields. A propagating continuous wave or quasi continuous probe beam undergoes modulation instability~\cite{lighthall} owing to the presence of large nonlinearity. The growth of instability and bandwidth of unstable frequencies could be externally govern by the Rabi frequency, two control detunings and power of the probe beam. Both fourth order dispersion and quintic nonlinearity reduce the growth and bandwidth of the unstable frequency.
