commit till now 10:49

--- a/LaTeX/Presentation/presentation.tex
+++ b/LaTeX/Presentation/presentation.tex
@@ -1,6 +1,6 @@
 \documentclass{beamer}
-\usetheme{CambridgeUS}
-\usecolortheme{beaver}
+\usetheme{Copenhagen}
+%\usecolortheme{beaver}
 \usepackage{subcaption}
 
 \title{Modulation Instability in Semiconductor Quantum Dots}
@@ -23,12 +23,18 @@
   \end{itemize}
 \end{frame}
 
+%Slide 2: Light matter interaction
+\begin{frame}{Light Matter Interaction}
+  
+\end{frame}
+
 % Slide 3: Energy Level Scheme
 \begin{frame}{Y-type Excitation Scheme in SQDs}
-  \vspace{-50pt}
+  \vspace{-30pt}
   \begin{figure}
     \includegraphics[width=0.6\textwidth]{Assets/Y-type.png}
   \end{figure}
+  \vspace{-12pt}
   \begin{itemize}
     \item We take Y-type 4-level excitation scheme.
   \end{itemize}
@@ -47,9 +53,9 @@
     \hfill
     \begin{minipage}{0.46\textwidth}
       \centering
-      \includegraphics[width=\linewidth]{Assets/Img_chi1_Omega_d.jpeg}
+      \includegraphics[width=\linewidth]{Assets/Real_chi1_Omega_c.jpeg}
       \subcaption{}
-    \end{minipage}\label{fig:imag-chi1}
+    \end{minipage}\label{fig:chi1_c}
    \end{figure}
 \end{frame}
 
@@ -60,7 +66,7 @@
     \centering
     \begin{minipage}{0.48\textwidth}
       \centering
-      \includegraphics[width=\linewidth]{Assets/Real_chi1_Omega_c.jpeg}
+      \includegraphics[width=\linewidth]{Assets/Img_chi1_Omega_d.jpeg}
       \subcaption{}
     \end{minipage}
     \hfill
@@ -68,7 +74,7 @@
       \centering
       \includegraphics[width=\linewidth]{Assets/Real_chi1_Omega_d.jpeg}
       \subcaption{}
-    \end{minipage}\label{fig:real-chi1}
+    \end{minipage}\label{fig:chi1_d}
    \end{figure}\begin{itemize}
     \item $\Omega_c$ controls slope \& zero-crossings.
     \item Enables slow/fast light applications.
@@ -76,7 +82,7 @@
 \end{frame}
 
 % Slide 6: Re[\chi^{(3)}] vs Detuning
-\begin{frame}{Kerr Nonlinearity: Re[$\chi^{(3)}$]}
+\begin{frame}{Kerr Nonlinearity: Re $\chi^{(3)}$}
   \vspace{-17pt}
   \hspace*{27pt}
   \includegraphics[width=0.75\textwidth]{Assets/Real_chi3_Omega_d.jpeg}
