--- a/LaTeX/Report/main.tex
+++ b/LaTeX/Report/main.tex
@@ -53,7 +53,7 @@
 \pagebreak
 
 \begin{abstract}
-    This study explores the phenomenon of modulation instability (MI) within semiconductor quantum dots (SQDs), emphasizing its implications for nonlinear optics and quantum information technologies. MI, which is defined as the exponential amplification of perturbations in nonlinear dispersive media, is studied in the context of SQDs due to their unique quantum confinement effects, which lead to enhanced optical nonlinearities. The research creates a mathematical model that uses density matrix formalism and nonlinear Schrödinger equations to analyze MI-induced dynamics. This framework facilitates a deeper understanding of light-matter interactions, which is critical for advancing applications in quantum computing, secure communication, and high-efficiency optical devices. The findings contribute to the optimization of SQD-based systems, highlighting their potential in next-generation photonic and quantum technology.
+    This study explores the phenomenon of modulation instability (MI) within semiconductor quantum dots (SQDs), emphasizing its implications for nonlinear optics and quantum technologies. MI, which is defined as the exponential amplification of perturbations in nonlinear dispersive media, is studied in the context of SQDs due to their unique quantum confinement effects, which lead to enhanced optical nonlinearities. The research creates a mathematical model that uses density matrix formalism and nonlinear Schrödinger equations to analyze MI-induced dynamics. This framework facilitates a deeper understanding of light-matter interactions, which is critical for advancing applications in quantum computing, secure communication, and high-efficiency optical devices. The findings contribute to the optimization of SQD-based systems, highlighting their potential in next-generation photonic and quantum technology.
 \end{abstract}
 
 \section{Introduction}
@@ -83,7 +83,7 @@ Modulation instability or sideband instability is a phenomenon whereby deviation
 MI has received special attention in optical fibers, since they possess high nonlinearity and tailorable dispersion profile. The first experimental observation of MI effect was reported by Tai et al. in 1986~\cite{tai1986generation}. Extension of MI to the normal dispersion regime was predicted in 1970. Since, then numerous researches were exerted towards improvement of MI spectra. A decade back, Erkintalo et al.~\cite{erkintalo2011higher} have reported a theoretical and experimental study on higher order MI in optical fibers. MI in dispersion oscillating fibers has reported by Mussot et al.~\cite{mussot2017modulation}. Recently, Kraych~\cite{kraych2019nonlinear} have reported a unique behavior in the evolution of a modulationally unstable plane wave driven by a small noise in fiber optics. In a recent study, Liu et al.~\cite{liu2021exact} have reported to obtain asymmetric spectra of MI by applying asymmetric physical effect called self-steepening.\par
 It is widely believed that the phenomenon was first discovered and modeled for periodic surface gravity waves (Stokes waves) on deep water by T. Brooke Benjamin and Jim E. Feir~\cite{Benjamin_Feir_1967}, in 1967. Therefore, it is also known as the Benjamin-Feir instability. Modulation instability (MI) is a fundamental phenomenon associated with an exponential growth of weak perturbed waves, during their propagation through nonlinear dispersive media. It occurs due to the interaction of nonlinear and dispersive effects which lead to the disintegration of waves into a train of shape preserving ultrashort pulses~\cite{MANUKURE2021100140}.\par
 Semiconductor quantum dots exhibit strong nonlinearities~\cite{Scully_Zubairy_1997} due to quantum confinement effects, leading to larger optical susceptibilities. Modulation instability, as a manifestation of nonlinear effects, provides insight into how these nonlinearities can amplify perturbations in the system, which is critical for optimizing optical device performance.\par
-Understanding Modulation Instability is relevant for quantum information technologies like quantum computers. Modulation Instability can impact entanglement generation, quantum coherence, and light-matter interaction dynamics, which are essential for quantum computing and secure communication.
+Understanding Modulation Instability is relevant for quantum technologies like quantum computers. Modulation Instability can impact entanglement generation, quantum coherence, and light-matter interaction dynamics, which are essential for quantum computing and secure communication.
 
 \section{Mathematical Model}
 \begin{figure}[h]
