--- a/LaTeX/Presentation/presentation.tex
+++ b/LaTeX/Presentation/presentation.tex
@@ -8,10 +8,15 @@
 \setbeamertemplate{navigation symbols}{}
 
 \title{Modulation Instability in Semiconductor Quantum Dots}
-\subtitle{Y-type Excitation Scheme: Interpretation of Plots and Experimental Implications}
-\author{Shaon Samanta}
-\institute{Department of Physics}
-\date{\today}
+\subtitle{Y-type Excitation Scheme}
+\author{Shaon Samanta\\
+        Department of Physics (MSc.)\\
+        Sem-IV\\[1.2em]
+        \textit{Supervised by,}\\
+        Dr. Rohit Mukherjee\\
+        Assistant Professor of Dept. of Physics (MSc.)\\
+        Sarala Birla University}
+\date{}
 
 \begin{document}
 
@@ -60,6 +65,15 @@
     \item Probe field couples levels $|1\rangle \rightarrow |2\rangle$.
     \item Control fields modulate transitions $|2\rangle \rightarrow |3\rangle$, $|3\rangle \rightarrow |4\rangle$.
     \item The interacting electric field inside QD is: \( \vec{E}=\sum_{j=p,c,b}\hat{e}_j E_j e^{i(k_j z-\omega_j t)} \)
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Modulation Instability}
+  \begin{itemize}
+    \item It is a process where a small perturbation on a Continuous Wave grows exponentially as it propagates through dispersive media.
+    \item It happens due to interplay between nonlinear effects and dispersion.
+    \item It produces the periodic wave train whose amplitude is high.
+    \item It is a wave breaking process where stable wave become unstable and cause modulation instability
   \end{itemize}
 \end{frame}
 
@@ -112,9 +126,7 @@
   \hspace*{32pt}
   \includegraphics[width=0.8\textwidth]{Assets/Beta2_Kerr.jpeg}
   \begin{itemize}
-    \item Threshold at $P_0$ $\approx 5\ mW$.
     \item Fourth-order dispersion ($\beta_4$) broadens bandwidth.
-    \item Application: broadband supercontinuum generation.
   \end{itemize}
 \end{frame}
 
